@@ -47,6 +47,8 @@ rpmcache =	$(abs_top_builddir)/tools/rpmcache --macros $(macros)
 rpmdigest =	$(abs_top_builddir)/tools/rpmdigest
 rpmrepo =	$(abs_top_builddir)/tools/rpmrepo
 rpmsql =	$(abs_top_builddir)/tools/sqlite3
+rpmsolverA =	${rpm} -i -D '_dbpath %{_solve_A}' --justdb --nodeps
+rpmsolverB =	${rpm} -i -D '_dbpath %{_solve_B}' --justdb --nodeps
 
 tdsa =		./tdsa
 tecdsa =	./tecdsa
@@ -67,13 +69,24 @@ rc =		$(abs_top_builddir)/tools/rc
 wget =		/usr/bin/wget
 
 sudo =		sudo
+caixaroot =	$(abs_top_builddir)/tests/tmp/CAIXA
 caosroot =	$(abs_top_builddir)/tests/tmp/CAOS
 centosroot =	$(abs_top_builddir)/tests/tmp/CENTOS
-suseroot =	$(abs_top_builddir)/tests/tmp/SUSE
-mandrivaroot =	$(abs_top_builddir)/tests/tmp/MANDRIVA
-caixaroot =	$(abs_top_builddir)/tests/tmp/CAIXA
 idmsroot =	$(abs_top_builddir)/tests/tmp/IDMS
+mandrivaroot =	$(abs_top_builddir)/tests/tmp/MANDRIVA
+suseroot =	$(abs_top_builddir)/tests/tmp/SUSE
 unityroot =	$(abs_top_builddir)/tests/tmp/UNITY
+
+poky_topdir =	/X/src/poky
+poky_deploy =	$(poky_topdir)/build/tmp/deploy/rpm
+poky_pkgsdirA =	$(poky_deploy)/i586
+poky_pkgsdirB =	$(poky_deploy)/all
+poky_pkgsdirC =	$(poky_deploy)/qemux86
+poky_options =	--noaid --nodeps --noorder --noscripts --notriggers --noparentdirs --nolinktos --stats
+poky_force =	--replacepkgs --replacefiles --oldpackage
+poky_solverA =	${rpm} -i $(poky_force) -D '_dbpath %{_solve_A}' --justdb $(poky_options)
+poky_solverB =	${rpm} -i $(poky_force) -D '_dbpath %{_solve_B}' --justdb $(poky_options)
+poky_solverC =	${rpm} -i $(poky_force) -D '_dbpath %{_solve_C}' --justdb $(poky_options)
 
 rpmdb =		$(abs_top_builddir)/tests/tmp/rpmdb
 rpmdb_Tables = \
@@ -285,6 +298,42 @@ check-build: $(BUILD_DIRS)
 	@${rpm} -qaT | grep -v gpg-pubkey > tmp/edos.qa.2
 	@diff -u {tmp,ref}/edos.qa.2 || ${cp} {tmp,ref}/edos.qa.2
 	@${rpm} -e car engine wheel door tyre window glass
+
+check-depsolver:
+	@echo "=== $@ ==="
+	rm -rf tmp/solveA tmp/solveB tmp/solveC
+	${rpmsolverA} edos-test/turbo-1* edos-test/wheel-2* edos-test/door-1*
+	${rpmsolverB} edos-test/engine-2*
+	rm -rf tmp/hrmib tmp/repackage
+	mkdir -p tmp/hrmib/ tmp/repackage/
+	-${rpm} -e --nodeps turbo
+	-${rpm} -e --nodeps car
+	-${rpm} -e --nodeps engine
+	-${rpm} -e --nodeps wheel
+	-${rpm} -e --nodeps door
+	-${rpm} -U edos-test/car-1-*
+	-${rpm} -qa
+	-${rpm} -e --nodeps turbo
+	-${rpm} -e --nodeps car
+	-${rpm} -e --nodeps engine
+	-${rpm} -e --nodeps wheel
+	-${rpm} -e --nodeps door
+
+check-poky:
+	@echo "=== $@ ==="
+	@rm -rf tmp/solveA tmp/solveB tmp/solveC
+	${poky_solverA} $(poky_pkgsdirA)/*.rpm
+	${poky_solverB} $(poky_pkgsdirB)/*.rpm
+	${poky_solverC} $(poky_pkgsdirC)/*.rpm
+	@rm -rf tmp/hrmib tmp/repackage
+	@mkdir -p tmp/hrmib/ tmp/repackage/
+	find $(poky_pkgsdirA) $(poky_pkgsdirB) $(poky_pkgsdirC) -name '*.rpm' | sort -u > poky_manifest
+	-for F in `cat poky_manifest`; do \
+	    echo "-----> " $$F; \
+	    ${rpm} -U --justdb --noscripts --notriggers --noparentdirs --nolinktos --stats $$F || : ; \
+	    ${rpm} -Va --nofiles --noaid --noparentdirs --nolinktos || : ; \
+	    ${rpm} -e --justdb --nodeps --noscripts --notriggers `${rpm} -qa | grep -v gpg-pubkey` || : ; \
+	done
 
 check-ACID:
 	@echo "=== $@ ==="
